fix(givon, waybar): correct right-hand-side module spacing

--- a/users/givon/wayland/sway/waybar/style.css
+++ b/users/givon/wayland/sway/waybar/style.css
@@ -63,7 +63,7 @@ tooltip label {
 #battery,
 #network,
 #clock {
-  margin: 0 -1em;
+  margin: 0;
 }
 
 /* PulseAudio */
